--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
         "aws/aws-php-sns-message-validator": "^1.5",
         "illuminate/http": "^6.4",
         "spatie/laravel-mailcoach": "^1.0",
-        "spatie/laravel-webhook-client": "^2.2",
+        "spatie/laravel-webhook-client": "^2.2"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
