--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 jobs:
     test:
+        fail-fast: false
         runs-on: ${{ matrix.os }}
         strategy:
             fail-fast: true
