--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,11 @@
         "spatie/laravel-webhook-client": "^2.2"
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^4.3",
+        "orchestra/testbench": "^4.5",
         "phpunit/phpunit": "^8.4",
-        "symfony/var-dumper": "^4.3"
+        "symfony/var-dumper": "^5.0"
     },
     "autoload": {
         "psr-4": {
