--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "friendsofphp/php-cs-fixer": "^2.16",
         "orchestra/testbench": "^4.5",
         "phpunit/phpunit": "^8.4",
-        "symfony/var-dumper": "^5.0"
+        "symfony/var-dumper": "^4.3|^5.0"
     },
     "autoload": {
         "psr-4": {
