--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
         "php": "^7.4",
         "aws/aws-php-sns-message-validator": "^1.6",
         "illuminate/http": "^6.4",
-        "spatie/laravel-mailcoach": "^1.6.10",
+        "spatie/laravel-mailcoach": "^1.6.10|^2.0",
         "spatie/laravel-webhook-client": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "^1.9",
         "friendsofphp/php-cs-fixer": "^2.16",
-        "orchestra/testbench": "^4.5",
+        "orchestra/testbench": "^4.5|^5.0",
         "phpunit/phpunit": "^8.4",
         "symfony/var-dumper": "^4.3|^5.0"
     },
