--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,11 +8,9 @@ jobs:
         strategy:
             matrix:
                 php: [7.4]
-                laravel: [6.*, 7.*]
+                laravel: [7.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
-                    -   laravel: 6.*
-                        testbench: 4.*
                     -
                       laravel: 7.*
                       testbench: 5.*
