--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "ext-json": "*",
         "php": "^7.4",
         "aws/aws-php-sns-message-validator": "^1.6",
-        "illuminate/http": "^7.0",
+        "illuminate/http": "^7.0|^8.0",
         "spatie/laravel-mailcoach": "^2.9",
         "spatie/laravel-webhook-client": "^2.4"
     },
