--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
         "ext-json": "*",
         "php": "^7.4",
         "aws/aws-php-sns-message-validator": "^1.6",
-        "illuminate/http": "^7.0|^8.0",
-        "spatie/laravel-mailcoach": "^2.9|^3.0",
+        "illuminate/http": "^8.0",
+        "spatie/laravel-mailcoach": "^3.0",
         "spatie/laravel-webhook-client": "^2.4"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9",
         "laravel/legacy-factories": "^1.0.4",
-        "orchestra/testbench": "^5.0|^6.0",
+        "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.0",
         "symfony/var-dumper": "^5.0"
     },
