--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -8,13 +8,11 @@ jobs:
     strategy:
       matrix:
         php: [7.4]
-        laravel: [8.*, 7.*]
+        laravel: [8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           -   laravel: 8.*
               testbench: 6.*
-          -   laravel: 7.*
-              testbench: 5.*
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
 
