--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [7.4]
+        php: [8.0, 7.4]
         laravel: [8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
@@ -20,12 +20,6 @@ jobs:
       -   name: Checkout code
           uses: actions/checkout@v2
 
-      -   name: Cache dependencies
-          uses: actions/cache@v2
-          with:
-            path: ~/.composer/cache/files
-            key: dependencies-laravel-${{ matrix.laravel }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
-
       -   name: Setup PHP
           uses: shivammathur/setup-php@v2
           with:
@@ -36,7 +30,7 @@ jobs:
       -   name: Install dependencies
           run: |
             composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-            composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+            composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
           env:
             COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
 
