--- a/composer.json
+++ b/composer.json
@@ -22,14 +22,13 @@
     ],
     "require": {
         "ext-json": "*",
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "aws/aws-php-sns-message-validator": "^1.6",
         "illuminate/http": "^8.0",
         "spatie/laravel-mailcoach": "^3.0",
         "spatie/laravel-webhook-client": "^2.4"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9",
         "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^6.0",
