--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "php": "^7.4|^8.0",
         "aws/aws-php-sns-message-validator": "^1.6",
         "illuminate/http": "^8.0",
-        "spatie/laravel-mailcoach": "^3.0",
+        "spatie/laravel-mailcoach": "^3.9.2",
         "spatie/laravel-webhook-client": "^2.4"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.9",
         "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.0",
