--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        php: [8.0, 7.4]
+        php: [8.0]
         laravel: [8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
