--- a/composer.json
+++ b/composer.json
@@ -24,13 +24,10 @@
         "ext-json": "*",
         "php": "^8.0",
         "aws/aws-php-sns-message-validator": "^1.6",
-        "illuminate/http": "^8.0",
-        "spatie/laravel-mailcoach": "^4.0",
-        "spatie/laravel-webhook-client": "^2.4"
+        "spatie/laravel-mailcoach": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
-        "laravel/legacy-factories": "^1.0.4",
         "orchestra/testbench": "^6.0",
         "phpunit/phpunit": "^9.5",
         "symfony/var-dumper": "^5.0"
@@ -42,7 +39,8 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Spatie\\MailcoachSesFeedback\\Tests\\": "tests"
+            "Spatie\\MailcoachSesFeedback\\Tests\\": "tests",
+            "Spatie\\Mailcoach\\Database\\Factories\\": "vendor/spatie/laravel-mailcoach/database/factories"
         }
     },
     "scripts": {
