--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
         "spatie/laravel-mailcoach": "^4.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9",
+        "fakerphp/faker": "^1.12",
         "orchestra/testbench": "^6.0",
-        "phpunit/phpunit": "^9.5",
-        "symfony/var-dumper": "^5.0"
+        "phpunit/phpunit": "^8.5.21|^9.5",
+        "symfony/var-dumper": "^5.2"
     },
     "autoload": {
         "psr-4": {
