--- a/composer.json
+++ b/composer.json
@@ -22,11 +22,11 @@
     ],
     "require": {
         "ext-json": "*",
-        "php": "^8.0",
+        "php": "^8.1",
         "aws/aws-php-sns-message-validator": "^1.7",
         "illuminate/support": "^9.0",
         "symfony/amazon-mailer": "^6.0",
-        "spatie/laravel-mailcoach": "^5.2"
+        "spatie/laravel-mailcoach": "v6.x-dev"
     },
     "require-dev": {
         "fakerphp/faker": "^1.12",
